[package]
name = "exchange_rate"
version = "1.0.0"
authors = ["Jonathan Cohlin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }
text_io = "0.1"
